# plone-operator

./: .ansible-lint  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  plone_operator.py  pyproject.toml  requirements.yml  watches.yaml
.github/: copilot-instructions.md
config/crd/bases/: plone.org_plonesites.yaml
config/manager/: manager.yaml  namespace.yaml  plone-namespace.yaml
config/rbac/: role.yaml  role_binding.yaml  service_account.yaml
config/samples/: classic_minikube_test.yaml  pg_minikube_test.yaml  plone61_minikube_test.yaml  plone_v1alpha1_plonesite.yaml  plonesite_classic.yaml  plonesite_volto.yaml  plonesite_with_postgresql.yaml  simple_plonesite.yaml
roles/plonesite/defaults/: main.yml
roles/plonesite/tasks/: main.yml
