[project]
name = "plone-operator"
version = "0.1.0"
description = "Kopf-based Kubernetes operator for managing Plone 6 CMS deployments"
requires-python = ">=3.12"
dependencies = [
    "kopf==1.37.2",
    "kubernetes>=28.1.0",
    "aiohttp>=3.9.0",
]

[tool.uv]
python-preference = "only-system"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
